--- a/OldBarom.Infra.DLC.IoC/OldBarom.Infra.DLC.IoC.csproj
+++ b/OldBarom.Infra.DLC.IoC/OldBarom.Infra.DLC.IoC.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OldBarom.Core.DLC.Application\OldBarom.Core.DLC.Application.csproj" />
+    <ProjectReference Include="..\OldBarom.Infra.DLC.Data\OldBarom.Infra.DLC.Data.csproj" />
+  </ItemGroup>
+
 </Project>
